@@ -72,6 +72,11 @@ drive letters to Unix paths, and vice-versa.</p>
     <td valign="top" align="center">No; if omitted, a nested
         <code>&lt;path&gt;</code> element must be supplied.</td>
   </tr>
+    <td valign="top">setonempty</td>
+    <td valign="top">Should the property be set, even if the result
+      is the empty string?
+    <td valign="top" align="center">No; default is &quot;true&quot;.
+  </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
 <h4>map</h4>
